made the top navbar and the main content. still have bugs. not responsive

--- a/style.css
+++ b/style.css
@@ -36,6 +36,14 @@ body {
   grid-column-end: 6;
   grid-row-start: 1;
   grid-row-end: 3;
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  grid-template-rows: repeat(2, 100px);
+  column-gap: 400px;
+  row-gap: 10px;
+  justify-content: center;
+  max-width: 100%;
+  width: 100%;
 }
 
 .mainContent {
@@ -44,6 +52,7 @@ body {
   grid-column-end: 6;
   grid-row-start: 3;
   grid-row-end: 6;
+  display: flex;
 }
 
 .logoContainer {
@@ -57,7 +66,7 @@ body {
   grid-column-end: 5;
   grid-row-start: 2;
   grid-row-end: 5;
-  gap: 10px;
+  gap: 20px;
   margin-bottom: -100px;
 }
 .lowerItemsContainer {
@@ -65,7 +74,7 @@ body {
   grid-column-start: 1;
   grid-column-end: 5;
   grid-row-start: 5;
-  gap: 10px;
+  gap: 20px;
 }
 .iconContainer {
   display: flex;
@@ -94,16 +103,197 @@ img {
   margin-top: 25px;
   margin-bottom: 12px;
   margin-left: 30px;
+  cursor: pointer;
 }
 .items h3 {
   margin-bottom: 30px;
   color: aliceblue;
   font-size: 25px;
   font-family: roboto;
+  width: 243px;
+  cursor: pointer;
 }
 .lowerItems h3 {
   margin-bottom: 30px;
   color: aliceblue;
   font-size: 25px;
   font-family: roboto;
+  cursor: pointer;
+}
+
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+  margin-left: -300px;
+}
+input[type="search"] {
+  height: 25px;
+  width: 1000px;
+  margin-top: 10px;
+  border-radius: 10px;
+}
+
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-left: -100px;
+  width: 300px;
+}
+.profilePic {
+  border: 1px solid rgb(5, 105, 255);
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+  background-image: url(image/profile.jpg);
+  background-position: 425px 490px;
+  background-size: 60px;
+}
+.profile h3 {
+  font-size: 30px;
+  font-family: roboto;
+}
+.greeting {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+  font-family: roboto;
+  margin-left: -500px;
+}
+.greet p {
+  font-weight: bold;
+  margin-bottom: -20px;
+}
+.greet h3 {
+  font-size: 25px;
+}
+.dp {
+  border: 1px solid rgb(5, 105, 255);
+  width: 90px;
+  height: 90px;
+  margin-left: 50px;
+  border-radius: 70px;
+  background-image: url(image/profile.jpg);
+  background-position: 405px 470px;
+  background-size: 80px;
+}
+
+.upload {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+.upload .new {
+  margin-left: -90px;
+}
+.upload > div {
+  border: 1px solid rgb(5, 105, 255);
+  border-radius: 10px;
+  background-color: rgb(5, 105, 255);
+  color: aliceblue;
+  padding: 10px 30px;
+  width: 50px;
+  font-family: roboto;
+}
+.upload > div:hover {
+  cursor: pointer;
+  background-color: rgb(9, 73, 170);
+}
+
+.blockContainer {
+  box-sizing: border-box;
+  display: grid;
+  grid-template: 230px 230px 230px / 400px 400px;
+  grid-template-rows: repeat(3, 230px);
+  grid-template-columns: repeat(minmax(400px, 1fr));
+  resize: both;
+  gap: 10px;
+}
+
+.blockContainer > div {
+  margin-left: 40px;
+  margin-top: 30px;
+  margin-bottom: 5px;
+  border-radius: 10px;
+  background-color: white;
+  border-left: 10px solid rgb(9, 73, 170);
+  padding: 10px;
+}
+.blockContainer .col1 {
+  margin-left: 50px;
+}
+.col1 h3 {
+  margin-bottom: -10px;
+}
+.col2 h3 {
+  margin-bottom: -10px;
+}
+.col1 p {
+  margin-bottom: -10px;
+}
+.col2 p {
+  margin-bottom: -10px;
+}
+.blockIcons .img1 {
+  margin-left: 150px;
+}
+.block5 {
+  margin-bottom: 10px;
+  height: 175px;
+}
+.blockContainer .block5,
+.block6 {
+  margin-bottom: 20px;
+}
+
+.aside {
+  width: 300px;
+  margin-left: 30px;
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: 250px;
+  grid-template-rows: repeat(2, 300px);
+  gap: 30px;
+}
+.aside1Container {
+  font-family: roboto;
+}
+.aside1 {
+  height: 250px;
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 10px;
+}
+.aside1 h5 {
+  font-size: 13px;
+  margin-bottom: -1px;
+}
+.aside1Container h3 {
+  margin-bottom: 5px;
+}
+.aside2Container {
+  font-family: roboto;
+}
+.aside2Container h3 {
+  margin-bottom: 5px;
+}
+.aside2 {
+  height: 250px;
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 10px;
+}
+.aside2 h5 {
+  font-size: 13px;
+  margin-bottom: -1px;
 }
